Attach file to events
Former-commit-id: ed61f454dbcabc1856067a1bd5bcf34398f1b161 [formerly 3f966b812e34af5df2d53e380bca8c4721b10a72] [formerly 3bfc3af13e23635d60318ed5df520d3cb6a2747d [formerly cb514b016807a0172ea9dd0e31dd1bea403c973b]]
Former-commit-id: 7377eaec38353025e580b0f6377a7941eac5277a [formerly 2c421903f2a973c7a349791502c80b73db0ad3c8]
Former-commit-id: 6319a45fb817699ac23d08fb5536936c2d9acd1b

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -142,6 +142,50 @@
     </div>
 
                     <div class="showPage col-md-12">
+                    <div class="row">
+                         <!-- HADJI HICHAM HH-21/10/2014 Attach files ! -->
+         <!-- begin -->
+             <div class="form-group">
+                <p class⁼"lead"=""><strong>{{ _('Attach files')}}</strong> </p>
+                  <div class="btn-group">
+                                    <a class="btn red" href="#" data-toggle="dropdown">
+                                     {{ _('Create')}}
+                                    <i class="icon-angle-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                      <li><a ng-click="showCreateDocument('document')" href="#" data-toggle="modal">
+                                           <img src="/static/img/google_drive/text/plain.png" class="">
+                                          {{ _('Document')}}
+                                          </a>
+                                      </li>
+                                      <li><a ng-click="showCreateDocument('presentation')" href="#" data-toggle="modal">
+                                           <img src="/static/img/google_drive/presentation.png" class="">
+                                          {{ _('Presentation')}}
+                                          </a>
+                                      </li>
+                                      <li><a ng-click="showCreateDocument('spreadsheet')" href="#" data-toggle="modal">
+                                           <img src="/static/img/google_drive/spreadsheet.png" class="">
+                                          {{ _('Spreadsheet')}}
+                                          </a>
+                                      </li>
+
+                                    </ul>
+                                </div>
+                                 <div class="btn-group">
+                                    <button ng-click="showAttachFilesPicker()" id="sample_editable_1_new" class="btn red">
+                                    <i class="fa fa-upload"></i>
+                                    </button>
+
+                                </div>
+            <!--       <a href="#" data-toggle="modal" ng-click="showAttachFilesPicker()"><i class="fa fa-file"></i> {{_('Attach files')}}</a> -->
+                            <ul class="list-unstyled">
+                                                            <li ng-repeat="file in files">
+                                                               <a href="/#/documents/show/<%=file.id%>"><%= file.title %></a> 
+                                                            </li>
+                             </ul>
+            </div>
+         <!-- end -->
+                    </div>
                   <div class="row">
         <div class="col-md-12">
                <div class="portlet">
