--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -112,7 +112,9 @@
   </div>
  <div class="row">
    <div class="col-md-12">
-
+      <div>
+   
+      </div>
      <div class="row">
       <div class="tab-pane">
       <div class="row">
@@ -476,6 +478,9 @@
         </div>
       </div>
   </div>
+
+
+
 <script type="text/javascript">
  $('#slimtest1').slimScroll({
                     height: '20px'
@@ -507,3 +512,4 @@
   $('.textfill').textfill({debug: true, maxFontPixels: 16});
   $('#slimList').slimScroll({});
 </script>
+
