--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1061,7 +1061,7 @@
                   <div class="formElements newEventToLead" ng-show="newEventform">
                             <div class="row">
                               <div class="col-md-12 margin-bottom-10">
-                                  <input ng-model="ioevent.title" type="text" id="taskName" class="form-control" placeholder="Event tilte">
+                                  <input ng-model="ioevent.title" type="text" id="taskName" class="form-control" placeholder="{{_('Event tilte')}}">
                               </div>
                               <!--/span-->
                             </div>
