--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -1637,7 +1637,7 @@
                               </div>
                               <!--/span-->
                             </div>
-                            {{ _('EAll day')}} <input type="checkbox" ng-model="allday"/>
+                            {{ _('All day')}} <input type="checkbox" ng-model="allday"/>
                               <!-- pick only date (the case of all day) -->
                               <div class="row" ng-show="allday">
                                 <div class="col-md-12 margin-bottom-10">
