Remove assignees on task Show page fix #1130
Former-commit-id: 901273f4ce024528a3f3b949065d70f5e1d2970d [formerly b9c3d61c70aabe72b0e4397dd3408855bae9b35b] [formerly 912d42d3d805a42a277f6e9d93af583313119a1d [formerly 6400bbcd34da74da815a406e95f0403aba543356]]
Former-commit-id: d00376acd9a09e8e2ab423a211fe0577caa3d859 [formerly 4267359c73dade666e66e3ae36c0658c078c8896]
Former-commit-id: 95fb46c508b221f409eac2b94e9d752977c463d5

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -219,7 +219,7 @@
               <ul class="list-unstyled showTagsList">
                  <li ng-show="task.assignees" class="inline-tags">{{ _('Assignees:')}}</li>
                  <li ng-repeat="assignee in task.assignees" class="inline-tags">
-                   <a  href="#" class="pull-left task-label task-tag">
+                   <a  href="#" editoptions editdataattr="deleteassignee('<%= assignee.edgeKey %>')" class="pull-left task-label task-tag">
                         <span class="">
                           <%= assignee.display_name %>                                                     
                         </span>
