--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1588,7 +1588,7 @@
                 <form id="addMember" name="addaccount" class="form-horizontal">
 
                     <p>{{ _("Who has access:")}}</p>
-                    <div class="radio-list">
+                    <div  class="radio-list" ng-show="lead.owner.google_user_id=={{ME}}">
 
                         <label >
                             <input type="radio" name="optionRadio" value="public" ng-model="lead.access" ng-click="share();"/>
@@ -1599,12 +1599,18 @@
                             {{ _("private: only you and your collaborators")}}
                         </label>
                     </div>
+                    <div ng-hide="lead.owner.google_user_id=={{ME}}">
+                        <label>you can't edit this you are not the owner </label>
+                    </div>
                     <hr/>
                     <div class='' id="collaborators">
                         <p>{{ _("Collaborators:")}}</p>
                         <div ng-repeat="collaborator in collaborators_list" class="invitation">
                             <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
-                            <%=collaborator.display_name%> < <%=collaborator.email%> >
+                            <%=collaborator.display_name%> <  <a editable-text="collaborator.email" editoptions > <%=collaborator.email%> </a> > <button class ="btn" ng-click="DeleteCollaborator(collaborator.entityKey)">x</button>
+
+
+
                         </div>
 
                     </div>
