before pull from iogrow
Former-commit-id: c3b08b05f9622cd9bdf00953449991011dceb67c [formerly ec28ad75e7c5afdc87e5a0dc7b4e894bef4d891a] [formerly a6bc6a9a3baecaf5c82fbbe11e44296f7d19a12d [formerly 2b01279b43acc47e15f7b64bb61c600a8b63286c]]
Former-commit-id: fbde97299606fdb01d9e4bbdbf8d835bd09a8cde [formerly 1d6f497afeaaf873ff7e209fd463acadddb6ec6e]
Former-commit-id: bf315aebd1b05f1bfc0808ec263e2f0c944e6ce3

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -2540,10 +2540,12 @@
                     <div class='' id="collaborators">
                          <hr/>
                         <p>{{ _("Collaborators:")}}</p>
-                        <div ng-repeat="collaborator in collaborators_list" class="invitation">
-                            <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
-                            <%=collaborator.display_name%> < <%=collaborator.email%> >
-                        </div>
+                        <ul class="list-unstyled contactInfos">
+                            <li editoptions editdataattr="deleteInfonode('<%=phone.entityKey%>','phones')" ng-repeat="collaborator in collaborators_list" class="invitation">
+                                <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
+                                <%=collaborator.display_name%> < <%=collaborator.email%> >
+                            </li>
+                        </ul>
                         
                     </div>
                    
