--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -164,8 +164,8 @@
                                     <li class="ng-tab sm-menu" ng-class="{active: selectedTab == 7}">
                                         <a ng-click="waterfallTrigger(); selectedTab = 7;">{{_('Attach Documents')}}</a>
                                     </li>
-                                    <li  ng-hide="noDetails()" class="ng-tab sm-menu"  ng-class="{active: selectedTab == 9}">
-                                        <a ng-click="waterfallTrigger(); selectedTab = 9;"  >{{_('Details of Lead')}}</a>
+                                    <li  class="ng-tab sm-menu" >
+                                        <a class="ng-tab sm-menu-inv"  ng-class="{active: selectedTab == 9, forceHide: noDetails()}" ng-click="waterfallTrigger(); selectedTab = 9;"  >{{_('Details of Lead')}}</a>
                                     </li>  
                                     <!-- <li class="ng-tab md-menu" ng-class="{active: selectedTab == 4}">
                                       <a ng-click="selectedTab = 4;">Needs</a>
@@ -1569,7 +1569,7 @@
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-                <input  ng-click="convert(lead)" type="submit" class="btn green" value="{{_('Convert this lead')}}">
+                <input  ng-click="convert(lead)" type="submit" class="btn green" value="Convert this lead">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
             </div>
             </form>
