Fix the translation
Former-commit-id: 2f1457b6c429e74e679b812dbdf1f05ab104b6bf [formerly 4a807abf4d341c5837aa39e6d6bcb63d71125346] [formerly 0a466ae655a3d87baa292311766567bb45ac0338 [formerly c03c712d1c94a1e2b1d8dc9e81741d840ccb5e1f]]
Former-commit-id: 70ea109935b47279485d547bca7c9d65592d38ef [formerly cf55f595208ba959dd8af52389c5addb3b4598ad]
Former-commit-id: 4c6c13abdde2a83f737533e6931a6d073fa06d64

--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -171,7 +171,7 @@
                                                     <form class="form-inline newLeadForm" role="form">
                                                         <div class="form-group lg-group" style="">
                                                             <label class="sr-only" for="exampleInputEmail2">{{ _('Email')}}</label>
-                                                            <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="{{ _('Enter a number')}}" required>
+                                                            <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="{{ _('Enter a email')}}" required>
                                                         </div>
                                                         <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email, emails, 'emails')" >{{ _('Add')}}</button>
                                                         <button type="submit" ng-click="showEmailForm = false" class="btn btn-default">X</button>
