Remove useless tabs on mobile screen like Need on Account fix #1134 , Remove assignees on task Show page fix #1130 , and add url to user in tasks
Former-commit-id: 12196f6d17f4b651fcd98070bc59805dc9701212 [formerly 81d49ba3a089a92c2828e89ab3eb524fdcb75020] [formerly 9db3f7dccfef8b47970f12f1e59e015a9541fb33 [formerly ede9e7f46141ff20d0821b47ee0118462e8fd233]]
Former-commit-id: c62d9407368d3e983bcb031222948c4a4f6f168b [formerly b60ce0f9bf67f1f23796b999b287461cbe8d8c8c]
Former-commit-id: 06d67b20b1c3a135b6fe992c47c505e05d7d544b

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -186,11 +186,11 @@
                                         <ul class="dropdown-menu" role="menu">
                                             <li class="ng-tab sm-menu-inv" ng-class="{active: selectedTab == 8}"><a ng-click="selectedTab = 8;">{{_('Send an Email')}}</a></li>
                                             <li class="ng-tab sm-menu-inv" ng-class="{active: selectedTab == 3}"><a ng-click="selectedTab = 3;">{{_('Contacts')}}</a></li>
-                                            <li class="ng-tab sm-menu-inv" ng-class="{active: selectedTab == 7}"><a ng-click="selectedTab = 7;">{{_('Attach Documents')}}</a>
-                                            <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;">{{_('Needs')}}</a></li>
+                                            <li class="ng-tab sm-menu-inv" ng-class="{active: selectedTab == 7}"><a ng-click="selectedTab = 7;">{{_('Attach Documents')}}</a></li>
+                                            
                                             <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 5}"><a ng-click="selectedTab = 5;">{{_('Opportunities')}}</a></li>
                                             <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">{{_('Cases')}}</a></li>
-                                            <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">{{_('Details of Account')}}</a></li>
+                                            <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 9, forceHide: noCompanyDetails() }"><a ng-click="selectedTab = 9;">{{_('Details of Account')}}</a></li>
                                         </ul>
                                     </li>
                                 </ul>
