add urls to user in tasks
Former-commit-id: fa1597ad45a5e17ed79047bbee5f01a8ad7186b3 [formerly 4b7fdd4e3cdad3a574045c30186e334903bd4a2e] [formerly 5934165558e30d3e9e59f6a3ead406837f87641d [formerly ac6c68511736443935b366fbb747968fe4a93cfb]]
Former-commit-id: ba474c10bf3fdc1436d283d7a096ca19111ba731 [formerly fd2e10bd5c1d3f5dec9bd99d6c474cfd01180cdb]
Former-commit-id: fb49c3c83e7ff6ac6748d41ea3d8586b393f8ce3

--- a/templates/admin/users/user_show.html
+++ b/templates/admin/users/user_show.html
@@ -267,14 +267,14 @@
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
-                                               <a href="#"> @<%= assignee.display_name %></a>
+                                               <a href="/#/admin/users/show/<%= assignee.google_user_id %>"> @<%= assignee.display_name %></a>
                                                <img alt="" src="<%= assignee.photo%>" class="user-photo" />
                                             </span>
                                         </div>
                                     </div>
                                      <div class="row">
                                       <p class="col-md-11 col-md-offset-1 list-group-item-text">
-                                         <span ng-show="task.created_by">{{ _('Opened by:')}}<a href="#"> <%= task.created_by.display_name %></a></span>
+                                         <span ng-show="task.created_by">{{ _('Opened by:')}}<a href="/#/admin/users/show/<%=task.created_by.google_user_id %>" > <%= task.created_by.display_name %></a></span>
                                           <span ng-show="task.about">{{ _('related to') }}<a href="<%= getUrl(task.about.kind,task.about.id); %>"> <%= task.about.name %></a> </span>
                                           <span ng-show="deletetask">
                                              <!-- to delete task -->
@@ -406,7 +406,7 @@
                                         </label>
                                        <h4 ng-dblclick="edit_task(task)" ng-show="edited_task!=task" class="col-md-6 col-xs-10 list-group-item-heading"
                                        ng-class= "{task_closed: task.status=='closed'}">
-                                        <%= task.title %>
+                                        <a href="/#/tasks/show/<%= task.id %>" > <%= task.title %></a>
                                        </h4>
                                        <div ng-show="edited_task==task" class="col-md-6 col-xs-7">
                                        <form ng-submit="done_edit_task(task)">
@@ -419,13 +419,13 @@
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
-                                               <a href="#"> @<%= assignee.display_name %></a>
+                                               <a href="/#/admin/users/show/<%= assignee.google_user_id %>" > @<%= assignee.display_name %></a>
                                             </span>
                                         </div>
                                     </div>
                                      <div class="row">
                                       <p class="col-md-11 col-md-offset-1 list-group-item-text">
-                                         <span ng-show="task.created_by">{{ _('Opened by:')}}<a href="#"> <%= task.created_by.display_name %></a></span> <span ng-show="task.about">{{ _('related to') }}<a href="#"> <%= task.about.name %></a></span>
+                                         <span ng-show="task.created_by">{{ _('Opened by:')}}<a  href="/#/admin/users/show/<%=task.created_by.google_user_id %>" > <%= task.created_by.display_name %></a></span> <span ng-show="task.about">{{ _('related to') }}<a href="#"> <%= task.about.name %></a></span>
                                          <!--<span>Closed by:<a href="#">Transline</a></span>-->
                                       </p>
                                       </div>
