Delete Comment API ,Fix #1216
Former-commit-id: 8d3dd060bb99ea27fdb2fc11010e363e38f3ab5a [formerly 832c60fa268810300e63dd0bfe45fe539364e54c] [formerly 274973e7a86ec6b37c627a7fb4b23a6f111581fe [formerly 4ff0cac39202d4cfb6ece00608bc648b55974a15]]
Former-commit-id: 9e6ea946f31de5b387955f068443cb7fc81e1356 [formerly 64c1bd5db2c123790d6a1571c10c41f88b6a892b]
Former-commit-id: c33e03897e4d2f687a4069d0a4d7e1aeaeeed149

--- a/templates/documents/show.html
+++ b/templates/documents/show.html
@@ -126,7 +126,9 @@
                                             <div class="message">
                                                 <span class="arrow"></span>
                                                 <a href="#" class="name"><%=comment.author.display_name%></a>
-                                                <span class="datetime">at <%=comment.updated_at | date:'yyyy-MM-dd - HH:mm:ss '%></span>
+                                                <span class="datetime">at <%=comment.updated_at | date:'yyyy-MM-dd - HH:mm:ss '%>
+                                             <a ng-click="commentDelete('<%=comment.id%>')"><i class="fa fa-trash-o"></i></a>
+                                                </span>
                                                 <span class="body">
                                                     <%=comment.content%>
                                                 </span>
