desplay loading in the case show when patching fields
Former-commit-id: 5b0547778a1afd29437996077ca9834e9219b598 [formerly c0a8d29143990ec4f6316e4bc44803e509bb0c67] [formerly 8e86ac232e9ca7724d2eba6e81249742179e1ca2 [formerly 4a850d55e597ddbc265a16fed932fcfb239aa1e3]]
Former-commit-id: ec18c53be4b86c2a8da8d8acb9becf3f788206ff [formerly d02787e818be93d66ebef7620dcd61d9077f2252]
Former-commit-id: 5b89dce78ddb321752038c14d803869ea746e7f8

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -21,7 +21,7 @@
     </div>
 </div>
 <div  class="page-content">
-    <div class="loader-container row" ng-show="isLoading">
+    <div class="loader-container row" >
         <div class="loader-dialog col-md-4 col-md-offset-4 ">
             <div class="loader-content">
                 {{_('Loading...')}}
@@ -1600,7 +1600,7 @@
                         </label>
                     </div>
                     <div ng-hide="lead.owner.google_user_id=={{ME}}">
-                        <label>you can't edit this you are not the owner </label>
+                        <label>you can't edit this  you are not the owner </label>
                     </div>
                     <hr/>
                     <div class='' id="collaborators">
