Patch Comment Api , Fix #1217
Former-commit-id: 34c86cc4fc57d5e1af0fd07bc9822d6f0e1d216d [formerly d2e6986a207c4f14af67cadd132f0a245c5f29b5] [formerly 3bca8b477bdfbb17d378a915ee22adc245a37f05 [formerly ff231dca775b120cca2b3ccad0647fc947815ea1]]
Former-commit-id: c66573412919d1d22db4c6714f71de73b390cf6c [formerly 0ec02d88848f68f6b8d22738c1b88df6ae8b7c56]
Former-commit-id: 6af7f281b18cabb101e32201ba929b25ede4fe57

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -230,7 +230,9 @@
                             </span>
 
                             <span class="body">
+                             <a  editable-text="comment.content" onbeforesave="inlinePatch('Comment','', 'content',comment.id,$data)">
                             <%=comment.content%>
+                            </a>
                             </span>
                           </div>
                         </li>
