--- a/templates/documents/show.html
+++ b/templates/documents/show.html
@@ -130,7 +130,9 @@
                                              <a ng-click="commentDelete('<%=comment.id%>')"><i class="fa fa-trash-o"></i></a>
                                                 </span>
                                                 <span class="body">
+                                                 <a  editable-text="comment.content" onbeforesave="inlinePatch('Comment','', 'content',comment.id,$data)">
                                                     <%=comment.content%>
+                                                    </a>
                                                 </span>
                                             </div>
                                         </li>
