Working on translate, change the price to 30 $
Former-commit-id: 48d97239292d23e6c875617b13b3ca42f1e4e8e6 [formerly 8bd4f79185187756118529e07e9d69ed868e313f] [formerly 0898be923adc42bee64716cf8ba92aa3d1b3fc75 [formerly 703c99b37d3ad8310689cd8f85eaa0bbd319ca03]]
Former-commit-id: 60adf814b105528957db29bb7da514b0e4b1a76c [formerly fbda7dc27e9a20211d457eb924cf270f7dbb3124]
Former-commit-id: b3f730d4c3d48b70f22c4dbcf5a5f696631fe179

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -229,7 +229,7 @@
                  <li class="inline-tags addNewAssigneeLi">
                    <a   class="pull-left task-label task-tag" ng-click="assigneeModal()">
                         <span class="" style="cursor:pointer;">
-                          {{ _("+ Add new")}}                                                     
+                          {{ _("+ Add new colaborator")}}                                                     
                         </span>
                          <div class="clearfix"></div>
                       </a>
