--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -83,7 +83,7 @@
                       <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
                     </div>
                     <div class="pull-right">
-                      <input  ng-click="addComment(comment)" ng-disabled="!comment.content"  type="submit" class="btn green" value="Add comment">
+                      <input  ng-click="addComment(comment)" ng-disabled="!comment.content"  type="submit" class="btn green" value="{{_('Add comment')}}">
 
                     </div>
                   </form>
@@ -136,7 +136,7 @@
         <div class="portlet showCard">
           <div class="portlet-title line">
             <div class="caption">
-              {{_('Who\'s involved')}}
+              {{_('Who\'s involved ?')}}
             </div>
           </div>
           <div class="portlet-body" id="chats">
