Missed translate in event show page , Fix #1226
Former-commit-id: fd39c6a8654aaf8ba28e8d7680080a2c47bc5081 [formerly 2aa6462e004041c48ad29fe0ff96fb590854517d] [formerly d32515f2840878df2c18417d8255d833813610e6 [formerly ed6376a52e25447d37f44c857b735a1167897748]]
Former-commit-id: 41dc2da183bd34a910406a6674a41d29e8a6e16c [formerly 769aee429e9ab26f958f7fe67ef7ccd98483a0e8]
Former-commit-id: f538df6342de5d61faadba6b906638aa8f39b7cc

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -199,7 +199,7 @@
 
                        <div class="pull-right">
 
-                        <input ng-disabled="isLoading || !comment.content" ng-click="addComment(comment)" type="submit" class="btn green" value="Add comment">
+                        <input ng-disabled="isLoading || !comment.content" ng-click="addComment(comment)" type="submit" class="btn green" value="{{_('Add comment')}}">
 
                         </div>
                                   <div class="clearfix"></div>
