--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -401,7 +401,7 @@
               </div>
             </div>
             <div class="portlet-body">
-              <input type="submit" onclick="chrome.webstore.install()"  class="btn blue btn-block pull-right" value="Install chrome extension" style="padding-left:5px;padding-right:5px;">
+              <input type="submit" onclick="chrome.webstore.install()"  class="btn blue btn-block pull-right" value="{{_('Install chrome extension')}}" style="padding-left:5px;padding-right:5px;">
               <div class="clearfix"></div>
             </div>
         </div>
