--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -842,9 +842,9 @@
                                          <i class='fa fa-tags'></i> {{ _("Add tags ")}}</a>
                                     </li>
                                     <li>
-                                     <a href="" ng-click="editbeforedelete(opportunity,'opportunity')">
-                                         <i class='fa fa-trash-o'></i> {{ _("Delete")}} </a>
-                                    </li>
+                       <a href="" ng-click="editbeforedeleteopp(opportunity)">
+                           <i class='fa fa-trash-o'></i> {{_('Delete')}} </a>
+                      </li>
                                   </ul>
                                 </div>
                                 <div class="detailsSection">
@@ -2668,7 +2668,34 @@
             </div>
             </div>
           </div>
+<div id="BeforedeleteOpportunity" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title">Delete Opportunity</h3>
+              </div>
+              <div class="modal-body">
+                 <form id="seletesho" name="deletesho" class="form-horizontal">
+                  <fieldset>
 
+                  <p>{{_("Are you sure you want to delete")}} :  <%=opportunity.name %> .</p>
+
+
+
+                    </fieldset>
+
+              </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+
+                <input  ng-click="deleteopportunity()" type="submit" class="btn red" value="Delete">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
+              </div>
+               </form>
+          </div>
+        </div>
+       </div>
 <script type="text/javascript">
   $(function() {
     $('#datetimepicker2').datetimepicker({
