--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -2526,43 +2526,47 @@
                 <form id="addMember" name="addaccount"  class="form-horizontal">
 
                     <p>{{ _("Who has access:")}}</p>
-                    <div class="radio-list">
+                    <div  class="radio-list" ng-show="account.owner.google_user_id=={{ME}}">
 
-                        <label>
-                            <input type="radio" name="optionRadio" value="public" ng-model="account.access" ng-click="share()"/>
+                        <label >
+                            <input type="radio" name="optionRadio" value="public" ng-model="account.access" ng-click="share();"/>
                             {{ _("public: Anyone within your organization can access and find")}}
                         </label>
                         <label >
-                            <input type="radio" name="optionRadio"  value="private" ng-model="account.access"  ng-click="share()"/>
+                            <input type="radio" name="optionRadio"  value="private" ng-model="account.access" ng-click="share();"/>
                             {{ _("private: only you and your collaborators")}}
                         </label>
                     </div>
-                   
+                    <div ng-hide="account.owner.google_user_id=={{ME}}">
+                        <label>you can't edit this  you are not the owner </label>
+                    </div>
+                    <hr/>
                     <div class='' id="collaborators">
-                         <hr/>
                         <p>{{ _("Collaborators:")}}</p>
-                        <ul class="list-unstyled contactInfos">
-                            <li editoptions editdataattr="deleteInfonode('<%=phone.entityKey%>','phones')" ng-repeat="collaborator in collaborators_list" class="invitation">
-                                <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
-                                <%=collaborator.display_name%> < <%=collaborator.email%> >
-                            </li>
-                        </ul>
-                        
+                        <div ng-repeat="collaborator in collaborators_list" class="invitation">
+                            <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
+                            <%=collaborator.display_name%> <  <a> <%=collaborator.email%> </a> > <button class ="btn" ng-hide="account.owner.google_user_id==collaborator.google_user_id || lead.access=='public'" ng-click="DeleteCollaborator(collaborator.entityKey)">x</button>
+
+
+
+                        </div>
+
                     </div>
                    
 
-                    <div class='' ng-show="account.access=='private'">
-                         <hr/>           
+                     <hr/>
+
+                    <div class=''>
+                        <p>{{ _("Invited user:")}}</p>
+                        <div class="invitation" ng-repeat="invited in sharing_with">
+                            <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
+                            <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
+                            <hr/>
+                        </div>
+
                         <p>{{ _("Invite collaborators:")}}</p>
-                        <div class="col-md-12">
                         <div class="form-group">
                             <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group')}}">
-                            <div class="invitation" ng-repeat="invited in sharing_with">
-                                <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
-                                <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
-                                <hr/>
-                            </div>
-                        </div>
                         </div>
 
                     </div>
