--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -166,7 +166,7 @@
                     <ul class="dropdown-menu drp-dwn-right " role="menu">
                       <li>
                        <a href="" ng-click="showAssigneeTags(opportunity)">
-                           <i class='fa fa-tags'></i> {{_('Add tags')}} </a>
+                           <i class='fa fa-tags'></i> {{_('Addd tags')}} </a>
                       </li>
                       <li>
                        <a href="" ng-click="editbeforedelete(opportunity)">
