--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -838,9 +838,9 @@
                                   </button>
                                   <ul class="dropdown-menu drp-dwn-right " role="menu">
                                     <li>
-                                     <a href="" ng-click="showAssigneeTags(opportunity)">
-                                         <i class='fa fa-tags'></i> {{ _("Add tags ")}}</a>
-                                    </li>
+                       <a href="" ng-click="showAssigneeTags(opportunity)">
+                           <i class='fa fa-tags'></i> {{_('Addd tags')}} </a>
+                      </li>
                                     <li>
                        <a href="" ng-click="editbeforedeleteopp(opportunity)">
                            <i class='fa fa-trash-o'></i> {{_('Delete')}} </a>
@@ -2696,6 +2696,34 @@
           </div>
         </div>
        </div>
+       <div id="assigneeTagsToOpp" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <h3 id="myModalLabel" class="modal-title">Add Tags </h3>
+            </div>
+            <div class="modal-body">
+               <form id="seletesho" name="deletesho" class="form-horizontal">
+               <div class="form-group">
+                    <select id="select2_sample2" class="form-control select2" multiple>
+                      <option ng-repeat="tag in tags"
+                      value='<%=tag.entityKey%>'>
+                        <%=tag.name%>
+                      </option>
+                    </select>
+                </div>
+            </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                <input ng-hide="isLoadingTask" ng-click="addTagsTothis()" type="submit" class="btn green" value="Add">
+                <input ng-show="isLoadingTask" type="submit" class="btn green" value="Loading..." disabled>
+              </div>
+          </form>
+        </div>
+      </div>
+  </div>
+
 <script type="text/javascript">
   $(function() {
     $('#datetimepicker2').datetimepicker({
